# CUDA-Neural-Network-Framework

./: .gitignore  CMakeLists.txt  README.md
cuda/: gemm.cu  tensor_add.cu
include/: framework.hpp  tensor.hpp  version.hpp
include/core/: tensor.hpp
include/cuda/: gemm.hpp  tensor_cuda.hpp
include/loss/: mse_loss.hpp
include/nn/: linear.hpp  module.hpp  parameter.hpp  relu.hpp  sequential.hpp
include/optim/: sgd.hpp
src/: framework.cpp  linear.cpp  main.cpp  mse_loss.cpp  parameter.cpp  relu.cpp  sequential.cpp  sgd.cpp  tensor.cpp
